<resources>
    <string name="app_name">LessonITAcademy</string>
    <string name="text_one">Pizza</string>
    <string name="text_two">Burger</string>
    <string name="btn_change">Change!</string>
    <string name="toast">In process...</string>
    <string name="btn_homework_1">Homework 1</string>
    <string name="btn_homework_2">Homework 2</string>
    <string name="btn_homework_3">Homework 3</string>
    <string name="btn_homework_4">Homework 4</string>
    <string name="btn_homework_5">Homework 5</string>
    <string name="btn_homework_6">Homework 6</string>
    <string name="btn_homework_7">Homework 7</string>
    <string name="btn_homework_9">Homework 9</string>
    <string name="btn_homework_10">Homework 10</string>
    <string name="btn_homework_16">Homework 16</string>
    <string name="get_image">Get image</string>
    <string name="timer_here">Timer here</string>
    <string name="input_name">Input owl\'s name</string>
    <string name="url_image">http://i.imgur.com/DvpvklR.png</string>
    <string name="finish">Finish</string>
    <string name="delete">Delete</string>
    <string name="save_change">Save change</string>
    <string name="name">Ivan</string>
    <string name="surname">Ivanov</string>
    <string name="got_it">Got it</string>
    <string name="start">Start</string>
    <string name="not_now">Not now</string>
    <string name="avatar_text">This is your avatar. You can click it to select and to change the picture</string>
    <string name="prompt_btn_save">Click it if you need to save some changes</string>
    <string name="prompt_btn_delete">Click it if you need to delete your account</string>
    <string name="tv_welcome_text">Glad to see you on study screen. Do you want to get trained?</string>

</resources>
