<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="30dp">

    <Button
        android:id="@+id/btn_hw1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_homework_1"/>
    <Button
        android:id="@+id/btn_hw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_homework_2"/>

    <Button
        android:id="@+id/btn_hw3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_homework_3"/>

    <Button
        android:id="@+id/btn_hw4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_homework_4"/>

    <Button
        android:id="@+id/btn_hw5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_homework_5"/>

</LinearLayout>