<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="45dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/lightGreen"
            android:textSize="30sp"
            android:gravity="center"
            android:text="@string/text_one"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:background="@color/rosyBrown"
            android:textSize="30sp"
            android:gravity="center"
            android:text="@string/text_two"
            android:textColor="@color/black"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_gravity="center"
        android:text="@string/btn_change"
        android:textSize="25sp"/>

</LinearLayout>